--- a/blackjack_engine/Cargo.toml
+++ b/blackjack_engine/Cargo.toml
@@ -35,7 +35,8 @@ num-traits = "0.2.14"
 atomic_float = "0.1"
 profiling = { version = "1.0" }
 nom = "7.1"
-mlua = { version = "0.8.1", features = ["luau"] }
+# mlua = { version = "0.8.1", features = ["luau"] }
+mlua = { version = "0.8.10", features = ["luau"] }
 notify = "4.0"
 walkdir = "2"
 bimap = "0.6.2"
