--- a/blackjack_godot/Cargo.toml
+++ b/blackjack_godot/Cargo.toml
@@ -17,7 +17,8 @@ crate-type = ["lib", "cdylib"]
 library = []
 
 [dependencies]
-mlua = { version = "0.8.1", features = ["luau"] }
+# mlua = { version = "0.8.1", features = ["luau"] }
+mlua = { version = "0.8.10", features = ["luau"] }
 glam = { version = "0.21.2", features = ["serde", "bytemuck"] }
 blackjack_engine = { path = "../blackjack_engine" }
 gdnative = "0.11.0"
