Fixinng compilation errors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
     "blackjack_godot",
     "blackjack_macros",
     "egui_node_graph",
-    "egui_node_graph_example",
+    # "egui_node_graph_example",
 ]
 
 resolver = "2"
@@ -19,9 +19,9 @@ opt-level = 3
 [patch.crates-io]
 # This is necessary until egui 0.20, because blackjack needs the changes from this PR:
 # https://github.com/emilk/egui/pull/2051
-egui = { git = "https://github.com/setzer22/egui", branch = "egui_0_19_plus_pr_2051" }
-egui-winit = { git = "https://github.com/setzer22/egui", branch = "egui_0_19_plus_pr_2051" }
-egui-wgpu = { git = "https://github.com/setzer22/egui", branch = "egui_0_19_plus_pr_2051" }
+# egui = { git = "https://github.com/setzer22/egui", branch = "egui_0_19_plus_pr_2051" }
+# egui-winit = { git = "https://github.com/setzer22/egui", branch = "egui_0_19_plus_pr_2051" }
+# egui-wgpu = { git = "https://github.com/setzer22/egui", branch = "egui_0_19_plus_pr_2051" }
 
 # NOTE: These patches are only used for development, and should be left
 # commented out in any commits to the 'main' branch
