--- a/blackjack_ui/Cargo.toml
+++ b/blackjack_ui/Cargo.toml
@@ -17,25 +17,39 @@ tracy = ["profiling/profile-with-tracy"]
 # Workspace dependencies
 blackjack_commons = { path = "../blackjack_commons" }
 blackjack_engine = { path = "../blackjack_engine" }
+egui_node_graph = { path = "../egui_node_graph" }
 
 # Git dependencies
-egui_node_graph = { git = "https://github.com/setzer22/egui_node_graph", rev = "f4009fccc92a5f2132109a661e9bb57cc38b7e51" }
-rend3 = { git = "https://github.com/setzer22/rend3.git", rev = "c1df4dca5247eda11c04c529d6376690717ce4d5" }
-rend3-routine = { git = "https://github.com/setzer22/rend3.git", rev = "c1df4dca5247eda11c04c529d6376690717ce4d5" }
+# egui_node_graph = { git = "https://github.com/setzer22/egui_node_graph", rev = "f4009fccc92a5f2132109a661e9bb57cc38b7e51" }
+rend3 = { git = "https://github.com/BVE-Reborn/rend3", rev = "d088a841b0469d07d5a7ff3f4d784e97b4a194d5" }
+rend3-routine = { git = "https://github.com/BVE-Reborn/rend3", rev = "d088a841b0469d07d5a7ff3f4d784e97b4a194d5" }
+rend3-types = { git = "https://github.com/BVE-Reborn/rend3", rev = "d088a841b0469d07d5a7ff3f4d784e97b4a194d5" }
+
+
+# rend3 =  { git = "https://github.com/setzer22/rend3.git", rev = "c1df4dca5247eda11c04c529d6376690717ce4d5" }
+# rend3-routine = { git = "https://github.com/setzer22/rend3.git", rev = "c1df4dca5247eda11c04c529d6376690717ce4d5" }
 glsl-include = { git = "https://github.com/setzer22/glsl-include", rev = "d9b1ade" }
-egui-gizmo = { git = "https://github.com/setzer22/egui-gizmo", rev = "a3415a075fc2b2ecd3b26cdef9cb7c1857d77478" }
+# egui-gizmo = { git = "https://github.com/setzer22/egui-gizmo", rev = "a3415a075fc2b2ecd3b26cdef9cb7c1857d77478" }
+transform-gizmo-egui = { version = "0.2.0" }
 
 # Crates.io crates
-egui-winit = { version = "0.19" }
-egui-wgpu = { version = "0.19" }
-egui = { version = "0.19" }
-glam = { version = "0.21.2", features = ["bytemuck"] }
+egui-winit = { version = "0.27.2" }
+egui-wgpu = { version = "0.27.2" }
+egui = { version = "0.27.2" }
+emath = { version = "0.27.2" }
+
+# egui-winit = { version = "0.19" }
+# egui-wgpu = { version = "0.19" }
+# egui = { version = "0.19" }
+glam = { version = "0.25.0", features = ["bytemuck"] }
 env_logger = { version = "0.9", default-features = false, features = [
     "termcolor",
     "atty",
 ] }
 winit = { version = "0.27.2" }
-wgpu = "0.13"
+# wgpu = "23.0.1"
+wgpu = "0.19"
+# wgpu = "0.13"
 pollster = "0.2"
 smallvec = { version = "1.7.0" }
 itertools = "0.10"
